Add back drawing.pdf

--- a/.gitignore
+++ b/.gitignore
@@ -127,7 +127,7 @@ sympy-plots-for-*.tex/
 
 *.pdf
 !main.pdf
-!other resources/drawing.pdf
+!drawing.pdf
 
 
 ## Sublime files no one else cares about
